@@ -1,339 +1,449 @@
 package pi.ms_users.service.impl;
 
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import feign.FeignException;
-import feign.Response;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.persistence.PersistenceContext;
+import jakarta.ws.rs.BadRequestException;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import pi.ms_users.domain.*;
 import pi.ms_users.dto.*;
-import pi.ms_users.dto.feign.PropertyDTO;
-import pi.ms_users.dto.feign.Status;
 import pi.ms_users.repository.IContractRepository;
-import pi.ms_users.repository.UserRepository.IUserRepository;
-import pi.ms_users.repository.feign.PropertyRepository;
-import pi.ms_users.security.SecurityUtils;
-import pi.ms_users.service.interf.IContractIncreaseService;
+import pi.ms_users.repository.IIncreaseIndexRepository;
 import pi.ms_users.service.interf.IContractService;
-import pi.ms_users.service.interf.IEmailService;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.Comparator;
 import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
-@SuppressWarnings("unused")
 @Service
 @RequiredArgsConstructor
 public class ContractService implements IContractService {
 
     private final IContractRepository contractRepository;
 
-    private final IContractIncreaseService contractIncreaseService;
+    private final IIncreaseIndexRepository increaseIndexRepository;
 
-    private final IUserRepository userRepository;
+    @PersistenceContext
+    private EntityManager em;
 
-    private final PropertyRepository propertyRepository;
+    @Transactional(readOnly = true)
+    public ContractGetDTO toGetDTO(Contract entity) {
+        if (entity == null) return null;
 
-    private final ObjectMapper objectMapper;
+        ContractGetDTO dto = new ContractGetDTO();
+        dto.setId(entity.getId());
+        dto.setUserId(entity.getUserId());
+        dto.setPropertyId(entity.getPropertyId());
+        dto.setContractType(entity.getContractType());
+        dto.setStartDate(entity.getStartDate());
+        dto.setEndDate(entity.getEndDate());
+        dto.setContractStatus(entity.getContractStatus());
+        dto.setCurrency(entity.getCurrency());
+        dto.setInitialAmount(entity.getInitialAmount());
+        dto.setAdjustmentFrequencyMonths(entity.getAdjustmentFrequencyMonths());
+        dto.setLastPaidAmount(entity.getLastPaidAmount());
+        dto.setLastPaidDate(entity.getLastPaidDate());
+        dto.setNote(entity.getNote());
+        dto.setHasDeposit(entity.isHasDeposit());
+        dto.setDepositAmount(entity.getDepositAmount());
+        dto.setDepositNote(entity.getDepositNote());
 
-    private final IEmailService emailService;
+        dto.setAdjustmentIndex(mapIncreaseIndex(entity.getAdjustmentIndex()));
 
-    public ContractDTO mapToDTO(Contract contract) {
-        ContractDTO dto = new ContractDTO();
-        dto.setId(contract.getId());
-        dto.setUserId(contract.getUserId());
-        dto.setPropertyId(contract.getPropertyId());
-        dto.setContractType(contract.getContractType());
-        dto.setStartDate(contract.getStartDate());
-        dto.setEndDate(contract.getEndDate());
-        dto.setContractStatus(contract.getContractStatus());
-        dto.setIncrease(contract.getIncrease());
-        dto.setIncreaseFrequency(contract.getIncreaseFrequency());
+        dto.setContractUtilities(entity.getContractUtilities() == null ? List.of()
+                        : entity.getContractUtilities().stream()
+                        .map(this::mapContractUtility)
+                        .toList()
+        );
 
-        List<ContractIncreaseDTO> increases = contract.getContractIncrease().stream().map(increase -> {
-            ContractIncreaseDTO increaseDTO = new ContractIncreaseDTO();
-            increaseDTO.setId(increase.getId());
-            increaseDTO.setDate(increase.getDate());
-            increaseDTO.setAmount(increase.getAmount());
-            increaseDTO.setCurrency(increase.getCurrency());
-            return increaseDTO;
-        }).collect(Collectors.toList());
+        dto.setContractIncrease(entity.getContractIncrease() == null ? List.of()
+                        : entity.getContractIncrease().stream()
+                        .map(this::mapContractIncrease)
+                        .toList()
+        );
 
-        dto.setContractIncrease(increases);
+        dto.setCommission(mapCommission(entity.getCommission()));
+
+        dto.setPayments(entity.getPayments() == null ? List.of()
+                        : entity.getPayments().stream()
+                        .map(this::mapPayment)
+                        .toList()
+        );
+
+        dto.setGuarantors(entity.getGuarantors() == null ? Set.of()
+                : entity.getGuarantors().stream()
+                .map(this::mapGuarantor)
+                .collect(Collectors.toSet()));
+
         return dto;
     }
 
+    private IncreaseIndexContractDTO mapIncreaseIndex(IncreaseIndex ii) {
+        if (ii == null) return null;
+        IncreaseIndexContractDTO d = new IncreaseIndexContractDTO();
+        d.setId(ii.getId());
+        d.setCode(ii.getCode());
+        d.setName(ii.getName());
+        return d;
+    }
+
+    private ContractUtilityContractDTO mapContractUtility(ContractUtility cu) {
+        ContractUtilityContractDTO d = new ContractUtilityContractDTO();
+        d.setId(cu.getId());
+        d.setPeriodicity(cu.getPeriodicity());
+        d.setInitialAmount(cu.getInitialAmount());
+        d.setLastPaidAmount(cu.getLastPaidAmount());
+        d.setLastPaidDate(cu.getLastPaidDate());
+        d.setNotes(cu.getNotes());
+        d.setUtilityId(cu.getUtility() != null ? cu.getUtility().getId() : null);
+        return d;
+    }
+
+    private ContractIncreaseContractDTO mapContractIncrease(ContractIncrease ci) {
+        ContractIncreaseContractDTO d = new ContractIncreaseContractDTO();
+        d.setId(ci.getId());
+        d.setDate(ci.getDate());
+        d.setCurrency(ci.getCurrency());
+        d.setAmount(ci.getAmount());
+        d.setAdjustment(ci.getAdjustment());
+        d.setNote(ci.getNote());
+        d.setPeriodFrom(ci.getPeriodFrom());
+        d.setPeriodTo(ci.getPeriodTo());
+        d.setIndexId(ci.getIndex() != null ? ci.getIndex().getId() : null);
+        return d;
+    }
+
+    private CommissionContractDTO mapCommission(Commission c) {
+        if (c == null) return null;
+        CommissionContractDTO d = new CommissionContractDTO();
+        d.setId(c.getId());
+        d.setCurrency(c.getCurrency());
+        d.setTotalAmount(c.getTotalAmount());
+        d.setDate(c.getDate());
+        d.setPaymentType(c.getPaymentType());
+        d.setInstallments(c.getInstallments());
+        d.setStatus(c.getStatus());
+        d.setNote(c.getNote());
+        return d;
+    }
+
+    private PaymentContractDTO mapPayment(Payment p) {
+        PaymentContractDTO d = new PaymentContractDTO();
+        d.setId(p.getId());
+        d.setPaymentCurrency(p.getPaymentCurrency());
+        d.setAmount(p.getAmount());
+        d.setDate(p.getDate());
+        d.setDescription(p.getDescription());
+        d.setConcept(p.getConcept());
+        d.setContractUtilityId(p.getContractUtility() != null ? p.getContractUtility().getId() : null);
+        d.setCommissionId(p.getCommission() != null ? p.getCommission().getId() : null);
+        return d;
+    }
+
+    private GuarantorGetContractDTO mapGuarantor(Guarantor g) {
+        GuarantorGetContractDTO d = new GuarantorGetContractDTO();
+        d.setId(g.getId());
+        d.setName(g.getName());
+        d.setPhone(g.getPhone());
+        d.setEmail(g.getEmail());
+        return d;
+    }
+
+    public ContractSimpleDTO toSimpleDTO(Contract entity) {
+        if (entity == null) return null;
+        ContractSimpleDTO dto = new ContractSimpleDTO();
+        dto.setId(entity.getId());
+        dto.setUserId(entity.getUserId());
+        dto.setPropertyId(entity.getPropertyId());
+        dto.setContractType(entity.getContractType());
+        dto.setStartDate(entity.getStartDate());
+        dto.setEndDate(entity.getEndDate());
+        dto.setContractStatus(entity.getContractStatus());
+        dto.setCurrency(entity.getCurrency());
+        dto.setInitialAmount(entity.getInitialAmount());
+        dto.setAdjustmentFrequencyMonths(entity.getAdjustmentFrequencyMonths());
+        dto.setLastPaidAmount(entity.getLastPaidAmount());
+        dto.setLastPaidDate(entity.getLastPaidDate());
+        dto.setNote(entity.getNote());
+        dto.setHasDeposit(entity.isHasDeposit());
+        dto.setDepositAmount(entity.getDepositAmount());
+        dto.setDepositNote(entity.getDepositNote());
+        dto.setAdjustmentIndexId(entity.getAdjustmentIndex() != null ? entity.getAdjustmentIndex().getId() : null);
+        dto.setContractUtilitiesIds(entity.getContractUtilities().stream().map(ContractUtility::getId).collect(Collectors.toList()));
+        dto.setCommissionId(entity.getCommission() != null ? entity.getCommission().getId() : null);
+        dto.setPaymentsIds(entity.getPayments().stream().map(Payment::getId).collect(Collectors.toList()));
+        dto.setGuarantorsIds(entity.getGuarantors() == null ? Set.of()
+                : entity.getGuarantors().stream()
+                .map(Guarantor::getId)
+                .collect(Collectors.toSet()));
+        return dto;
+    }
+
+    public Contract toEntity(ContractDTO dto) {
+        if (dto == null) return null;
+        Contract entity = new Contract();
+        entity.setId(dto.getId());
+        entity.setUserId(dto.getUserId());
+        entity.setPropertyId(dto.getPropertyId());
+        entity.setContractType(dto.getContractType());
+        entity.setStartDate(dto.getStartDate());
+        entity.setEndDate(dto.getEndDate());
+        entity.setContractStatus(dto.getContractStatus());
+        entity.setCurrency(dto.getCurrency());
+        entity.setInitialAmount(dto.getInitialAmount());
+        entity.setAdjustmentFrequencyMonths(dto.getAdjustmentFrequencyMonths());
+        entity.setLastPaidAmount(dto.getLastPaidAmount());
+        entity.setLastPaidDate(dto.getLastPaidDate());
+        entity.setNote(dto.getNote());
+
+        if (dto.getHasDeposit() != null) {
+            entity.setHasDeposit(dto.getHasDeposit());
+        }
+
+        if (Boolean.TRUE.equals(dto.getHasDeposit())) {
+            entity.setDepositAmount(dto.getDepositAmount());
+            entity.setDepositNote(dto.getDepositNote());
+        } else {
+            entity.setDepositAmount(null);
+            entity.setDepositNote(null);
+        }
+
+        if (dto.getAdjustmentIndexId() != null) {
+            entity.setAdjustmentIndex(em.getReference(IncreaseIndex.class, dto.getAdjustmentIndexId()));
+        }
+
+        if (dto.getGuarantorsIds() != null && !dto.getGuarantorsIds().isEmpty()) {
+            Set<Guarantor> gs = dto.getGuarantorsIds().stream()
+                    .map(id -> em.getReference(Guarantor.class, id))
+                    .collect(Collectors.toSet());
+            entity.setGuarantors(gs);
+        } else {
+            entity.getGuarantors().clear();
+        }
+
+        return entity;
+    }
+
+    private void validateDeposit(Boolean hasDeposit, BigDecimal amount, String note) {
+        boolean hd = Boolean.TRUE.equals(hasDeposit);
+        if (hd && (amount == null || amount.compareTo(BigDecimal.ZERO) < 0)) {
+            throw new BadRequestException("Si hasDeposit=true, depositAmount debe ser >= 0.");
+        }
+        if (!hd && (amount != null || note != null)) {
+            throw new BadRequestException("Si hasDeposit=false, depositAmount y depositNote deben ser null.");
+        }
+    }
+
     @Override
-    public ResponseEntity<String> create(ContractDTO contractDTO, BigDecimal amount, ContractIncreaseCurrency currency) {
-        PropertyDTO propertyDTO;
-        try {
-            propertyDTO = propertyRepository.getById(contractDTO.getPropertyId());
-        } catch (FeignException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("No se ha encontrado la propiedad.");
+    @Transactional
+    public ResponseEntity<String> create(ContractDTO contractDTO) {
+        if (contractDTO.getAdjustmentIndexId() == null || !increaseIndexRepository.existsById(contractDTO.getAdjustmentIndexId())) {
+            throw new EntityNotFoundException("No se ha encontrado el índice de aumento con ID: " + contractDTO.getAdjustmentIndexId());
         }
 
-        if (!propertyDTO.getStatus().equals(Status.DISPONIBLE.name())) {
-            return ResponseEntity.badRequest().body("La propiedad no se encuentra disponible.");
+        if (contractDTO.getHasDeposit()) {
+            validateDeposit(true, contractDTO.getDepositAmount(), contractDTO.getDepositNote());
         }
 
-        User user = userRepository.findById(contractDTO.getUserId())
-                .orElseThrow(() -> new NoSuchElementException("No se ha encontrado el usuario."));
+        Contract entity = toEntity(contractDTO);
 
-        List<String> userRoles = userRepository.addRoleToUser(user.getId(), "tenant");
-        if (!userRoles.contains("tenant")) {
-            return ResponseEntity.badRequest().body("No se ha podido modificar el rol del usuario.");
-        }
-
-        ResponseEntity<String> response = propertyRepository.updateStatus(propertyDTO.getId(), Status.ALQUILADA);
-        if (!response.getStatusCode().is2xxSuccessful()) {
-            return ResponseEntity.badRequest().body("No se ha podido modificar el estado de la propiedad.");
-        }
-
-        Contract contract = objectMapper.convertValue(contractDTO, Contract.class);
-        Contract saved;
-        try {
-            saved = contractRepository.save(contract);
-        } catch (Exception e) {
-            propertyRepository.updateStatus(propertyDTO.getId(), Status.DISPONIBLE);
-            userRepository.deleteRoleToUser(user.getId(), "tenant");
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("No se pudo crear el contrato.");
-        }
-
-        EmailContractDTO emailData = new EmailContractDTO();
-        emailData.setTo(user.getEmail());
-        emailData.setTitle("¡Tu contrato está listo!");
-        emailData.setFirstName(user.getFirstName());
-        emailData.setContractId(saved.getId());
-        emailService.sendNewContractEmail(emailData);
-
-        ContractIncrease contractIncrease = new ContractIncrease();
-        contractIncrease.setAmount(amount);
-        contractIncrease.setCurrency(currency);
-        contractIncrease.setDate(contractDTO.getStartDate());
-        contractIncrease.setContract(contract);
-
-        ContractIncreaseDTO contractIncreaseDTO = objectMapper.convertValue(contractIncrease, ContractIncreaseDTO.class);
-        contractIncreaseDTO.setContractId(contract.getId());
-
-        contractIncreaseService.create(contractIncreaseDTO);
+        contractRepository.save(entity);
 
         return ResponseEntity.ok("Se ha creado el contrato.");
     }
 
     @Override
+    @Transactional
     public ResponseEntity<String> update(ContractDTO contractDTO) {
-        Contract contract = contractRepository.findById(contractDTO.getId())
-                .orElseThrow(() -> new NoSuchElementException("No se ha encontrado el contrato."));
-
-        contract.setContractStatus(contractDTO.getContractStatus());
-        contract.setContractType(contractDTO.getContractType());
-
-        List<ContractIncrease> contractIncrease = objectMapper.convertValue(
-                contractDTO.getContractIncrease(),
-                new TypeReference<>() {}
-        );
-
-        contract.setContractIncrease(contractIncrease);
-        contract.setIncrease(contractDTO.getIncrease());
-        contract.setStartDate(contractDTO.getStartDate());
-        contract.setEndDate(contractDTO.getEndDate());
-        contract.setUserId(contractDTO.getUserId());
-        contract.setIncreaseFrequency(contractDTO.getIncreaseFrequency());
-        contract.setPropertyId(contractDTO.getPropertyId());
-
-        contractRepository.save(contract);
-        return ResponseEntity.ok("Se ha actualizado el contrato");
-    }
-
-    @Override
-    public ResponseEntity<String> updateStatus(Long id) {
-        Contract contract = contractRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("No se ha encontrado el contrato."));
-
-        if (contract.getContractStatus() == ContractStatus.ACTIVO) {
-            contract.setContractStatus(ContractStatus.INACTIVO);
-        } else {
-            contract.setContractStatus(ContractStatus.ACTIVO);
+        if (contractDTO.getId() == null) {
+            throw new IllegalArgumentException("Debe indicar el ID del contrato a actualizar.");
         }
 
-        contractRepository.save(contract);
-        return ResponseEntity.ok("Se ha actualizado el estado del contrato a " + contract.getContractStatus());
+        Contract entity = contractRepository.findById(contractDTO.getId())
+                .orElseThrow(() -> new EntityNotFoundException("No se ha encontrado el contrato con ID: " + contractDTO.getId()));
+
+        if (contractDTO.getAdjustmentIndexId() != null &&
+                !increaseIndexRepository.existsById(contractDTO.getAdjustmentIndexId())) {
+            throw new EntityNotFoundException(
+                    "No se ha encontrado el índice de aumento con ID: " + contractDTO.getAdjustmentIndexId()
+            );
+        }
+
+        if (contractDTO.getUserId() != null) entity.setUserId(contractDTO.getUserId());
+        if (contractDTO.getPropertyId() != null) entity.setPropertyId(contractDTO.getPropertyId());
+        if (contractDTO.getContractType() != null) entity.setContractType(contractDTO.getContractType());
+        if (contractDTO.getStartDate() != null) entity.setStartDate(contractDTO.getStartDate());
+        if (contractDTO.getEndDate() != null) entity.setEndDate(contractDTO.getEndDate());
+        if (contractDTO.getContractStatus() != null) entity.setContractStatus(contractDTO.getContractStatus());
+        if (contractDTO.getCurrency() != null) entity.setCurrency(contractDTO.getCurrency());
+        if (contractDTO.getInitialAmount() != null) entity.setInitialAmount(contractDTO.getInitialAmount());
+        if (contractDTO.getAdjustmentFrequencyMonths() != null)
+            entity.setAdjustmentFrequencyMonths(contractDTO.getAdjustmentFrequencyMonths());
+        if (contractDTO.getLastPaidAmount() != null) entity.setLastPaidAmount(contractDTO.getLastPaidAmount());
+        if (contractDTO.getLastPaidDate() != null) entity.setLastPaidDate(contractDTO.getLastPaidDate());
+        if (contractDTO.getNote() != null) entity.setNote(contractDTO.getNote());
+
+        if (contractDTO.getAdjustmentIndexId() != null) {
+            entity.setAdjustmentIndex(em.getReference(IncreaseIndex.class, contractDTO.getAdjustmentIndexId()));
+        }
+
+        contractRepository.save(entity);
+
+        return ResponseEntity.ok("Se ha actualizado el contrato.");
     }
 
     @Override
-    public ResponseEntity<String> delete(Long id) {
-        Contract contract = contractRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("No se ha encontrado el contrato."));
+    @Transactional
+    public ResponseEntity<String> updateStatus(Long contractId) {
+        Contract entity = contractRepository.findById(contractId)
+                .orElseThrow(() -> new EntityNotFoundException("No se ha encontrado el contrato."));
 
-        contractRepository.delete(contract);
+        ContractStatus status = entity.getContractStatus();
+
+        if (status == ContractStatus.ACTIVO) {
+            entity.setContractStatus(ContractStatus.INACTIVO);
+        } else {
+            entity.setContractStatus(ContractStatus.ACTIVO);
+        }
+
+        return ResponseEntity.ok("Se ha actualizado el estado del contrato.");
+    }
+
+    @Override
+    @Transactional
+    public ResponseEntity<String> delete(Long id) {
+        if (!contractRepository.existsById(id)) {
+            throw new EntityNotFoundException("No se ha encontrado el contrato.");
+        }
+
+        contractRepository.deleteById(id);
         return ResponseEntity.ok("Se ha eliminado el contrato.");
     }
 
     @Override
-    public ResponseEntity<ContractDTO> getById(Long id) {
-        Contract contract = contractRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("No se ha encontrado el contrato."));
-
-        if (SecurityUtils.isTenant() &&
-                !contract.getUserId().equals(SecurityUtils.getCurrentUserId())) {
-            throw new AccessDeniedException("No tiene el permiso para realizar esta accion.");
-        }
-
-        ContractDTO contractDTO = mapToDTO(contract);
-        return ResponseEntity.ok(contractDTO);
+    @Transactional
+    public ResponseEntity<String> deleteByPropertyId(Long propertyId) {
+        contractRepository.deleteByPropertyId(propertyId);
+        return ResponseEntity.ok("Se ha eliminado el contrato.");
     }
 
     @Override
-    public ResponseEntity<List<ContractDTO>> getByUserId(String userId) {
-        if (!userRepository.exist(userId)) {
-            throw new NoSuchElementException("No se ha encontrado el usuario.");
-        }
-
-        if (SecurityUtils.isTenant() &&
-                !userId.equals(SecurityUtils.getCurrentUserId())) {
-            throw new AccessDeniedException("No tiene el permiso para realizar esta accion.");
-        }
-
-        List<Contract> contracts = contractRepository.findByUserId(userId);
-        List<ContractDTO> contractDTOs = contracts.stream()
-                .map(this::mapToDTO)
-                .toList();
-        return ResponseEntity.ok(contractDTOs);
+    @Transactional
+    public ResponseEntity<String> deleteByUserId(String userId) {
+        contractRepository.deleteByUserId(userId);
+        return ResponseEntity.ok("Se ha eliminado el contrato.");
     }
 
     @Override
-    public ResponseEntity<List<ContractDTO>> getByPropertyId(Long propertyId) {
-        PropertyDTO propertyDTO = propertyRepository.getById(propertyId);
-        List<Contract> contracts = contractRepository.findByPropertyId(propertyDTO.getId());
-        List<ContractDTO> contractDTOs = contracts.stream()
-                .map(this::mapToDTO)
-                .toList();
-        return ResponseEntity.ok(contractDTOs);
+    @Transactional(readOnly = true)
+    public ResponseEntity<ContractGetDTO> getById(Long id) {
+        Contract entity = contractRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("No se ha encontrado el contrato."));
+
+        ContractGetDTO contractGetDTO = toGetDTO(entity);
+
+        return ResponseEntity.ok(contractGetDTO);
     }
 
     @Override
-    public ResponseEntity<List<ContractDTO>> getByType(ContractType type) {
-        List<Contract> contracts = contractRepository.findByType(type);
-        List<ContractDTO> contractDTOs = contracts.stream()
-                .map(this::mapToDTO)
-                .toList();
-        return ResponseEntity.ok(contractDTOs);
-    }
-
-    @Override
-    public ResponseEntity<List<ContractDTO>> getByStatus(ContractStatus status) {
-        List<Contract> contracts = contractRepository.findByStatus(status);
-        List<ContractDTO> contractDTOs = contracts.stream()
-                .map(this::mapToDTO)
-                .toList();
-
-        return ResponseEntity.ok(contractDTOs);
-    }
-
-    @Override
-    public ResponseEntity<List<ContractDTO>> getByDateBetween(LocalDateTime start, LocalDateTime end) {
-        List<Contract> contracts = contractRepository.findByDateBetween(start, end);
-        List<ContractDTO> contractDTOs = contracts.stream()
-                .map(this::mapToDTO)
-                .toList();
-
-        return ResponseEntity.ok(contractDTOs);
-    }
-
-    @Override
-    public ResponseEntity<List<ContractDTO>> getAll() {
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getAll() {
         List<Contract> contracts = contractRepository.findAll();
-        List<ContractDTO> contractDTOs = contracts.stream()
-                .map(this::mapToDTO)
-                .toList();
-
-        return ResponseEntity.ok(contractDTOs);
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
     }
 
-    // Para actualizar automaticamente el status del contrato a inactivo
-    @Transactional
-    public void applyScheduledInactive() {
-        List<Contract> contracts = contractRepository.findContractsEndingToday(ContractStatus.ACTIVO);
-        for (Contract contract : contracts) {
-            contract.setContractStatus(ContractStatus.INACTIVO);
-            contractRepository.save(contract);
-        }
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getByUserId(String userId) {
+        List<Contract> contracts = contractRepository.findByUserId(userId);
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
     }
 
-    // Para avisar que faltan 30 dias para terminar el contrato
-    @Transactional
-    public void applyScheduledSoonInactive() {
-        LocalDate targetDate = LocalDate.now().plusDays(30);
-        LocalDateTime startOfDay = targetDate.atStartOfDay();
-        LocalDateTime endOfDay = targetDate.plusDays(1).atStartOfDay().minusNanos(1);
-
-        List<Contract> contracts = contractRepository.findByStatusAndEndDateBetween(ContractStatus.ACTIVO, startOfDay, endOfDay);
-
-        for (Contract contract : contracts) {
-            Optional<User> user = userRepository.findById(contract.getUserId());
-            if (user.isEmpty()) continue;
-
-            EmailExpirationContract emailData = new EmailExpirationContract();
-            emailData.setTo(user.get().getEmail());
-            emailData.setTitle("Tu contrato está por finalizar");
-            emailData.setFirstName(user.get().getFirstName());
-            emailData.setEndDate(contract.getEndDate());
-
-            try {
-                emailService.sendContractExpirationReminder(emailData);
-            } catch (Exception e) {
-                System.err.println("Error al enviar recordatorio de vencimiento: " + e.getMessage());
-            }
-        }
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getByStatus(ContractStatus status) {
+        List<Contract> contracts = contractRepository.findByStatus(status);
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
     }
 
-    // Para avisar del pago del alquiler
-    @Transactional
-    public void applyScheduledPayment() {
-        if (LocalDate.now().getDayOfMonth() != 1) return;
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getByType(ContractType type) {
+        List<Contract> contracts = contractRepository.findByType(type);
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
+    }
 
-        List<Contract> contracts = contractRepository.findByStatus(ContractStatus.ACTIVO);
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getActiveContracts() {
+        List<Contract> contracts = contractRepository.findActiveContracts();
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
+    }
 
-        for (Contract contract : contracts) {
-            Optional<User> userOpt = userRepository.findById(contract.getUserId());
-            if (userOpt.isEmpty()) continue;
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getByProperty(Long propertyId) {
+        List<Contract> contracts = contractRepository.findByProperty(propertyId);
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
+    }
 
-            User user = userOpt.get();
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractSimpleDTO>> getByPropertyForMS(Long propertyId) {
+        List<Contract> contracts = contractRepository.findByPropertyMS(propertyId);
+        List<ContractSimpleDTO> contractSimpleDTOS = contracts.stream().map(this::toSimpleDTO).toList();
+        return ResponseEntity.ok(contractSimpleDTOS);
+    }
 
-            LocalDateTime now = LocalDateTime.now();
-            Optional<ContractIncrease> latestIncreaseOpt = contract.getContractIncrease().stream()
-                    .filter(i -> !i.getDate().isAfter(now))
-                    .max(Comparator.comparing(ContractIncrease::getDate));
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getByDate(LocalDate date) {
+        List<Contract> contracts = contractRepository.findByDate(date);
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
+    }
 
-            if (latestIncreaseOpt.isEmpty()) {
-                System.err.println("Contrato sin aumentos vigentes: " + contract.getId());
-                continue;
-            }
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getByDateRange(LocalDate from, LocalDate to) {
+        List<Contract> contracts = contractRepository.findByDateRange(from, to);
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
+    }
 
-            ContractIncrease latestIncrease = latestIncreaseOpt.get();
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getContractsExpiringWithin(int days) {
+        LocalDate to = LocalDate.now().plusDays(days);
+        List<Contract> contracts = contractRepository.findExpiringUntil(to);
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
+    }
 
-            EmailPaymentReminderDTO reminder = new EmailPaymentReminderDTO();
-            reminder.setTo(user.getEmail());
-            reminder.setFirstName(user.getFirstName());
-            reminder.setDueDate(LocalDate.now());
-            reminder.setAmount(latestIncrease.getAmount());
-            reminder.setCurrency(latestIncrease.getCurrency());
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getContractsEndingDate(LocalDate date) {
+        List<Contract> contracts = contractRepository.findByExactEndDate(date);
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
+    }
 
-            try {
-                emailService.sendRentPaymentReminder(reminder);
-            } catch (Exception e) {
-                System.err.println("Error al enviar recordatorio de alquiler: " + e.getMessage());
-            }
-        }
+    @Override
+    @Transactional(readOnly = true)
+    public ResponseEntity<List<ContractGetDTO>> getContractsEndingBetween(LocalDate from, LocalDate to) {
+        List<Contract> contracts = contractRepository.findExpiringBetween(from, to);
+        List<ContractGetDTO> contractGetDTOS = contracts.stream().map(this::toGetDTO).toList();
+        return ResponseEntity.ok(contractGetDTOS);
     }
 }
